--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,49 @@ ul {
     justify-content: space-between;
 }
 
+.one > div {
+    display: flex;
+    margin-bottom: 150px;
+}
+
+.hero-text {
+    flex-direction: column;
+    gap: 8px;
+    max-width: 460px;
+}
+
+.image {
+    width: 550px;
+    max-height: 250px;
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+}
+
+.image > p {
+    color: white;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-text > p {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.first-b {
+    background-color: #3882F6;
+    color: white;
+    font-size: 18px;
+    padding: 8px 32px;
+    font-weight: bold;
+    border-radius: 8px;
+    text-decoration: none;
+    border: none;
+}
