--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,36 @@ h1 {
     text-decoration: none;
     border: none;
 }
+
+h2 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+    margin-top: 48px;
+    margin-bottom: 48px;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    gap: 64px;
+}
+
+.border {
+    border: 4px #3882F6 solid;
+    border-radius: 16px;
+    height: 170px;
+}
+
+.border-text {
+    display: flex;
+    flex-direction: column;
+    max-width: 170px;
+}
+
+.border-text > p {
+    text-align: center;
+    margin-top: 8px;
+    color: #3a3f45
+}
