--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ h1 {
     color: white;
     font-size: 18px;
     padding: 8px 32px;
+    margin-top: 8px;
     font-weight: bold;
     border-radius: 8px;
     text-decoration: none;
@@ -106,7 +107,7 @@ h2 {
 .call-to-action {
     display: flex;
     justify-content: center;
-    gap: 64px;
+    gap: 50px;
 }
 
 .border {
@@ -123,6 +124,7 @@ h2 {
 
 .border-text > p {
     text-align: center;
+    font-size: 18px;
     margin-top: 8px;
     color: #3a3f45
 }
